Fixed collapsed transitioning too fast  for opacity

--- a/Landing Page 05/style.scss
+++ b/Landing Page 05/style.scss
@@ -42,15 +42,15 @@ body {
 .expanded {
   opacity: 1;
   pointer-events: auto;
-  transition: max-height 0.3s ease-in, opacity 0.5s ease-in,
-    transform 0.3s ease-in;
+  transition: max-height 0.3s ease-in, opacity 0.3s ease-in,
+    transform 0.5s ease-out;
   max-height: 120px;
   transform: translateY(0);
 }
 
 .collapsed {
-  transition: max-height 0.3s ease-in, opacity 50ms ease-in,
-    transform 0.3s ease-in;
+  transition: max-height 0.3s ease-out, opacity 0.3s ease-out,
+    transform 0.3s ease-out;
   transform: translateY(-10px);
   opacity: 0;
   max-height: 0;
@@ -60,14 +60,12 @@ body {
 .show {
   opacity: 1;
   pointer-events: auto;
-  // transform: translateX(0);
-  transition: opacity 0.1s ease-in 0.1s, visibility 0.1s linear 0.1s;
+  transition: opacity 0.5s ease-in 0.1s, visibility 0.1s linear 0.1s;
 }
 
 .not-show {
   opacity: 0;
   pointer-events: none;
-  // transform: translateX(100%);
 }
 
 // MAIN
@@ -122,7 +120,6 @@ main {
       height: 100%;
       background-color: rgba(0, 0, 0, 0.5);
       z-index: 1;
-      transition: opacity 0.1s ease-in-out 0.1s;
     }
 
     .secondary-nav {
